feat(Marcos): Projeto desenvolvido durante treinamento

--- a/etc/apache2/sites-available/000-default.conf
+++ b/etc/apache2/sites-available/000-default.conf
@@ -14,3 +14,20 @@
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 </VirtualHost>
+
+<VirtualHost *:80>
+
+    ServerName php.localhost
+    DocumentRoot /var/www/html/marcos/public/
+
+    <Directory /var/www/html/marcos/public/>
+      Options Indexes FollowSymLinks MultiViews
+      AllowOverride All
+      Order allow,deny
+      allow from all
+    </Directory>
+
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+</VirtualHost>
