--- a/www/html/marcos/composer.json
+++ b/www/html/marcos/composer.json
@@ -7,10 +7,10 @@
 	"require": {
 		"php": "^7.3||^8.0",
 		"codeigniter4/framework": "^4",
-		"codeigniter4/translations": "^4.1"
+		"codeigniter4/translations": "^4.1",
+		"twig/twig": "^3.0"
 	},
 	"require-dev": {
-		"fakerphp/faker": "^1.9",
 		"mikey179/vfsstream": "^1.6",
 		"phpunit/phpunit": "^9.1"
 	},
